# wolfspider

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
config/: app.yaml
data/: douban_7_habits.html  fandeng.txt
docs/: db.sql
tests/core/data/: douban_7_habits.html
wolfspider/: settings.py
wolfspider/core/: bookutils.py  html.py  htmlutils.py
wolfspider/spiders/: hello_spider.py
wolfspider/spiders/book/: dangdang_spider.py  douban_spider.py  jdbook_spider.py
wolfspider/spiders/book/douban/: book.py  parser.py
wolfspider/spiders/economy/: gdp_spider.py
