[tool.poetry]
name = "wolfspider"
version = "0.1.0"
description = "wolf spider"
authors = ["winglechen <winglechen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pywolf = "^0.1.0"
pytest = "^7.2.2"
Scrapy = "^2.8.0"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
